--- a/playbooks/kong_ops.yml
+++ b/playbooks/kong_ops.yml
@@ -1,6 +1,11 @@
+---
 - name: Kong Adhoc Operations
-  hosts: kong
-  gather_facts: no
+  hosts: all
+  gather_facts: false
 
-  roles:
-    - role: kong_ops
+  tasks:
+    - name: Check who is running
+      command: whoami
+
+    - name: Check Kong version
+      command: kong version
