--- a/playbooks/kong_ops.yml
+++ b/playbooks/kong_ops.yml
@@ -1,32 +1,22 @@
-- name: Kong Ops – Adhoc Demo
+- name: Kong Adhoc Operations
   hosts: all
   gather_facts: false
 
   tasks:
-
-    - name: Who am I
+    - name: Show execution user
       raw: whoami
       register: whoami_out
       changed_when: false
 
-    - name: Whoami output
+    - name: Output whoami only
       debug:
         msg: "Executed as user: {{ whoami_out.stdout_lines[0] }}"
 
-    - name: Kong version
+    - name: Get Kong version
       raw: kong version
       register: kong_version
       changed_when: false
 
-    - name: Kong version output
+    - name: Output Kong version only
       debug:
-        msg: "{{ kong_version.stdout_lines[0] }}"
-
-    - name: Kong status
-      raw: systemctl status kong --no-pager
-      register: kong_status
-      changed_when: false
-
-    - name: Kong status output
-      debug:
-        msg: "{{ kong_status.stdout_lines[0:5] }}"
+        msg: "Kong version: {{ kong_version.stdout_lines[0] }}"
