--- a/playbooks/kong_ops.yml
+++ b/playbooks/kong_ops.yml
@@ -1,22 +1,32 @@
-- name: Kong Adhoc Operations
+- name: Kong Ops – Adhoc Demo
   hosts: all
   gather_facts: false
+  become: false   # IMPORTANT
 
   tasks:
-    - name: Show execution user
+    - name: Who am I
       raw: whoami
       register: whoami_out
       changed_when: false
 
-    - name: Output whoami only
+    - name: Whoami output
       debug:
-        msg: "Executed as user: {{ whoami_out.stdout_lines[0] }}"
+        msg: "Executed as user: {{ whoami_out.stdout | trim }}"
 
-    - name: Get Kong version
+    - name: Kong version
       raw: kong version
       register: kong_version
       changed_when: false
 
-    - name: Output Kong version only
+    - name: Kong version output
       debug:
-        msg: "Kong version: {{ kong_version.stdout_lines[0] }}"
+        msg: "Kong version: {{ kong_version.stdout | trim }}"
+
+    - name: Kong status
+      raw: sudo systemctl status kong --no-pager
+      register: kong_status
+      changed_when: false
+
+    - name: Kong status output
+      debug:
+        msg: "{{ kong_status.stdout_lines[0:5] }}"
