--- a/roles/kong_ops/tasks/main.yml
+++ b/roles/kong_ops/tasks/main.yml
@@ -1,19 +1,21 @@
-# 1️⃣ Run adhoc command (optional)
-- name: Run adhoc command
-  shell: "{{ adhoc_cmd }}"
-  register: adhoc_result
-  when:
-    - adhoc_cmd is defined
-    - adhoc_cmd | length > 0
+---
+# =========================
+# NORMALIZE INPUTS
+# =========================
+- name: Normalize inputs
+  set_fact:
+    adhoc_cmd_final: "{{ adhoc_cmd | default('whoami') }}"
+    kong_action_final: "{{ kong_action | default('none') }}"
 
-# 2️⃣ Validate kong_action
+# =========================
+# VALIDATE kong_action (only if not none)
+# =========================
 - name: Validate kong_action
   fail:
-    msg: "Invalid kong_action: {{ kong_action }}"
+    msg: "Invalid kong_action: {{ kong_action_final }}"
   when:
-    - kong_action is defined
-    - kong_action not in [
-        'none',
+    - kong_action_final != 'none'
+    - kong_action_final not in [
         'kong_start',
         'kong_stop',
         'kong_restart',
@@ -21,18 +23,20 @@
         'fetch_error_logs'
       ]
 
-# 3️⃣ Logs
-- include_tasks: logs.yml
-  when: kong_action in ['fetch_access_logs', 'fetch_error_logs']
+# =========================
+# RUN ADHOC COMMAND (ONLY WHEN NO ACTION)
+# =========================
+- name: Run adhoc command
+  shell: "{{ adhoc_cmd_final }}"
+  register: adhoc_result
+  changed_when: false
+  when: kong_action_final == 'none'
 
-# 4️⃣ Service
-- include_tasks: service.yml
-  when: kong_action in ['kong_start', 'kong_stop', 'kong_restart']
+# =========================
+# LOG ACTIONS
+# =========================
+- name: Include log tasks
+  include_tasks: logs.yml
+  when: kong_action_final in ['fetch_access_logs', 'fetch_error_logs']
 
-# 5️⃣ Summary
-- name: Execution Summary
-  debug:
-    msg:
-      - "Adhoc Command : {{ adhoc_cmd | default('N/A') }}"
-      - "Kong Action   : {{ kong_action | default('none') }}"
-      - "Status        : SUCCESS"
+# ======
