--- a/playbooks/kong_ops.yml
+++ b/playbooks/kong_ops.yml
@@ -35,6 +35,12 @@
     # =========================
     - name: Start Kong
       raw: sudo kong start
+      register: kong_start_out
+      when: kong_action_final == "kong_start"
+
+    - name: Start Kong result
+      debug:
+        msg: "✅ Kong started successfully"
       when: kong_action_final == "kong_start"
 
     # =========================
@@ -42,6 +48,12 @@
     # =========================
     - name: Stop Kong
       raw: sudo kong stop
+      register: kong_stop_out
+      when: kong_action_final == "kong_stop"
+
+    - name: Stop Kong result
+      debug:
+        msg: "🛑 Kong stopped successfully"
       when: kong_action_final == "kong_stop"
 
     # =========================
@@ -49,14 +61,30 @@
     # =========================
     - name: Restart Kong
       raw: sudo kong restart
+      register: kong_restart_out
+      when: kong_action_final == "kong_restart"
+
+    - name: Restart Kong result
+      debug:
+        msg: "🔁 Kong restarted successfully"
       when: kong_action_final == "kong_restart"
 
     # =========================
-    # SUMMARY
+    # JOB SUMMARY (STATS TAB)
     # =========================
     - name: Job Summary
       set_stats:
         data:
-          cmd: "{{ kong_cmd_final }}"
-          action: "{{ kong_action_final }}"
+          cmd_selected: "{{ kong_cmd_final }}"
+          action_selected: "{{ kong_action_final }}"
           execution: "{{ 'ACTION' if kong_action_final != 'none' else 'CMD' }}"
+          result: >-
+            {% if kong_action_final == 'kong_start' %}
+            Kong started successfully
+            {% elif kong_action_final == 'kong_stop' %}
+            Kong stopped successfully
+            {% elif kong_action_final == 'kong_restart' %}
+            Kong restarted successfully
+            {% else %}
+            Whoami executed as {{ whoami_out.stdout | trim }}
+            {% endif %}
