--- a/roles/kong_ops/tasks/logs.yml
+++ b/roles/kong_ops/tasks/logs.yml
@@ -1,19 +1,26 @@
-- name: Ensure local log directory
-  delegate_to: localhost
-  file:
-    path: /tmp/kong_logs
-    state: directory
+---
+# =========================
+# FETCH ACCESS LOGS
+# =========================
+- name: Read Kong access logs
+  raw: tail -n 50 /usr/local/kong/logs/access.log || echo "No access logs found"
+  register: access_logs
+  when: kong_action_final == "fetch_access_logs"
 
-- name: Fetch access logs
-  fetch:
-    src: "{{ kong_log_dir }}/access.log"
-    dest: /tmp/kong_logs/access.log
-    flat: yes
-  when: kong_action == 'fetch_access_logs'
+- name: Display access logs
+  debug:
+    msg: "{{ access_logs.stdout | default('No access logs found') }}"
+  when: kong_action_final == "fetch_access_logs"
 
-- name: Fetch error logs
-  fetch:
-    src: "{{ kong_log_dir }}/error.log"
-    dest: /tmp/kong_logs/error.log
-    flat: yes
-  when: kong_action == 'fetch_error_logs'
+# =========================
+# FETCH ERROR LOGS
+# =========================
+- name: Read Kong error logs
+  raw: tail -n 50 /usr/local/kong/logs/error.log || echo "No error logs found"
+  register: error_logs
+  when: kong_action_final == "fetch_error_logs"
+
+- name: Display error logs
+  debug:
+    msg: "{{ error_logs.stdout | default('No error logs found') }}"
+  when: kong_action_final == "fetch_error_logs"
